--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Magic weapon maker for dungeons and dragons fifth edition using react & redux ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "node index.js"
   },
   "keywords": [
     "Redux",
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "express": "^4.14.0",
     "fetch": "^1.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
